show hostname - username - password if a hostname is matched with the current tab, still doing some research in background to detect login forms and the post request of a login

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -2,3 +2,23 @@ body {
     width: 300px;
     height: 200px;
 }
+
+#vault {
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    height: auto;
+    min-height: 8vh;
+    background-color: lightgrey;
+}
+
+.site {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.site p {
+    margin-right: 17%;
+    margin-left: 5%;
+}
