--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,6 +1,7 @@
-body {
+html, body {
     width: 300px;
-    height: 200px;
+    height: 400px;
+    margin: 0px;
 }
 
 #vault {
@@ -21,4 +22,17 @@ body {
 .site p {
     margin-right: 17%;
     margin-left: 5%;
+}
+
+.menu {
+    position: absolute;
+    bottom: 0;
+    height: 10vh;
+    display: flex; 
+    justify-content: space-between; /* Distribute buttons with space between them */
+    width: 100%; /* Ensure #bar spans the width of the container */
+}
+
+.menu button {
+    flex : 1;
 }
