--- a/popup/popup.css
+++ b/popup/popup.css
@@ -4,7 +4,7 @@ html, body {
     margin: 0px;
 }
 
-#vault {
+#logins {
     border-color: black;
     border-style: solid;
     border-width: 1px;
@@ -29,10 +29,30 @@ html, body {
     bottom: 0;
     height: 10vh;
     display: flex; 
-    justify-content: space-between; /* Distribute buttons with space between them */
-    width: 100%; /* Ensure #bar spans the width of the container */
+    justify-content: space-between;
+    width: 100%;
 }
 
 .menu button {
     flex : 1;
 }
+
+.overlay {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100; 
+    display: flex;
+    justify-content: center;
+    transform: translateY(100%);
+    transition: transform 0.5s ease;
+    background: gray;
+  }
+  
+  .overlay.show {
+    transform: translateY(0); /* Glisse dans l'écran */
+  }
+  
+  
